--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
     padding: 30px;
     padding-bottom: 40px;
     transition: 0.4s;
-    border: 5px double #ecb8b8;
+    border: 5px double #f2a3a3;
 }
 .window header{
     width: 100%;
